[package]
name = "lau-a2a-protocol"
version = "0.1.0"
edition = "2021"
description = "Agent-to-Agent protocol layer for PLATO"
license = "MIT"
repository = "https://github.com/SuperInstance/lau-a2a-protocol"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
